--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'kitchenpos'
+
+include 'module-common'
+include 'module-product'
+include 'module-menu'
+include 'module-table'
+include 'module-order'
