feat: 상품 모듈 분리
공통 모듈의 테스트 코드 참조를 위한 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ project(':module-common') {
 project(':module-product') {
     dependencies {
         implementation project(':module-common')
+        testImplementation project(':module-common').sourceSets.test.output
     }
 }
 
